--- a/src/style/_page.scss
+++ b/src/style/_page.scss
@@ -1,6 +1,7 @@
 .#{$prefix-cls}-page-wrapper {
   z-index: 1;
   height: 100%;
+  overflow-y: auto;
 }
 
 .#{$prefix-cls}-page-container {
